<resources>
    <string name="app_name">Practical4</string>
    <string name="my_button_text">Hello, I am a TextView</string>
    <string name="my_text">Hello, I am a Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_picker">Time Picker</string>
    <string name="date_picker">Date Picker</string>
    <string name="currentdate">CurrentDate</string>
    <string name="currenttime">CurrentTime</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_alert_dialog_activity">go to alert dialog activity</string>

    <string name="dialog_fire_missiles">Fire missiles?</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>


    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="color_picker">Color Picker</string>
    <string name="settings_clicked">You\'ve clicked on settings!</string>
    <string name="favorite_clicked">You\'ve clicked on favorite!</string>
    <string name="action_search">Search</string>
    <string name="search_clicked">You\'ve clicked on search!</string>
    <string name="share">Share</string>
    <string name="share_clicked">You\'ve clicked on Share!</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
</resources>
