<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/my_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/my_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/my_button"
        style="@style/Widget.MaterialComponents.Button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_text" />

    <Button
        android:id="@+id/btn_time"
        android:onClick="showTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/time_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_button" />

    <Button
        android:id="@+id/btn_date"
        android:onClick="showDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_picker"
        app:layout_constraintStart_toEndOf="@+id/btn_time"
        app:layout_constraintTop_toBottomOf="@+id/my_button" />

    <TextView
        android:id="@+id/showTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/currenttime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time" />

    <TextView
        android:id="@+id/showDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/currentdate"
        app:layout_constraintBaseline_toBaselineOf="@+id/showTime"
        app:layout_constraintStart_toEndOf="@+id/showTime" />

    <Button
        android:id="@+id/btnNext"
        android:onClick="launchAlertDialogActivity"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_alert_dialog_activity"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTime" />

    <!--<ListView-->
        <!--android:id="@+id/list_view"-->
        <!--android:layout_width="395dp"-->
        <!--android:layout_height="503dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/my_button" />-->

</android.support.constraint.ConstraintLayout>